gem2deb (1.5) UNRELEASED; urgency=medium

  [ Debian Ruby Team ]
  * 

  [ Daniel Leidert ]
  * lib/gem2deb/dh_make_ruby/template/debian/watch: Add regex for matching the
    sources on github.
  * lib/gem2deb/dh_make_ruby/template/debian/upstream/metadata: Change fields.
    (Bug-Submit): Point to the URL opening a new issue.
    (Chaneglog): Use the releases page which contains the changelog.

 -- Debian Ruby Team <pkg-ruby-extras-maintainers@lists.alioth.debian.org>  Wed, 04 Nov 2020 13:00:38 +0100

gem2deb (1.4) unstable; urgency=medium

  [ Helmut Grohne ]
  * Annotate ruby interpreter dependencies with :any. (Closes: #970470)

  [ Antonio Terceiro ]
  * test_helper: fix code coverage configuration

  [ Lucas Kanashiro ]
  * Do not add extensions to the generated gemspec (Closes: #972702)
  * Add myself to the Uploaders list

 -- Lucas Kanashiro <kanashiro@debian.org>  Fri, 30 Oct 2020 11:46:14 -0300

gem2deb (1.3) unstable; urgency=medium

  [ Chris Hofstaedtler ]
  * Remove rubysetuprb buildsystem (Closes: #969327)

  [ Cédric Boutillier ]
  * Add .gitattributes to keep unwanted files out of the source package

  [ Antonio Terceiro ]
  * rake test:coverage: run unit tests only
  * test_helper: review code coverage requirements
  * README: update

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 14 Sep 2020 10:41:39 -0300

gem2deb (1.2.1) unstable; urgency=medium

  [ Marc Dequènes (Duck) ]
  * Safety net for UTF-8 unfriendly env

  [ Antonio Terceiro ]
  * Gem2Deb::TestRunner: use UTF-8 encoding by default

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 15 Jul 2020 09:46:23 -0300

gem2deb (1.2) unstable; urgency=medium

  [ Marc Dequènes (Duck) ]
  * Support dependency checks with multiple binaries (Closes: #950629).

  [ Utkarsh Gupta ]
  * Bump debhelper-compat to 13

  [ Chris Lamb ]
  * Gem2Deb::GemInstaller: delete mkmf.log from extension dir (Closes: #964772)

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 11 Jul 2020 15:58:11 -0300
